Laid out basic project structure.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "briskhome",
-  "version": "0.1.0",
+  "name": "briskhome-core",
+  "version": "0.1.1",
   "description": "",
   "main": "briskhome.js",
   "scripts": {
-    "test": "mocha briskhome.test.js"
+    "test": "mocha briskhome-core.spec.js"
   },
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "license": "MIT",
@@ -16,10 +16,13 @@
     "chai": "^3.4.1"
   },
   "dependencies": {
+    "briskhome-events": "file:///Users/heuels/Desktop/Briskhome/briskhome-events",
     "briskhome-sysmon": "file:///Users/heuels/Desktop/Briskhome/briskhome-sysmon",
     "bristol": "^0.3.3",
+    "forge": "^2.3.0",
     "moment": "^2.10.6",
     "mongoose": "^4.2.8",
+    "node-forge": "^0.6.38",
     "node-nut": "^0.1.0"
   }
 }
