Irrigation module added.
* Added fully functional irrigation module.
* Added dummy modules for 1-wire network and API.
* New module naming and comment convention.
* Added configuration file `briskhome.conf` that is used for
configuring all modules.

--- a/lib/core.bus/package.json
+++ b/lib/core.bus/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@briskhome/core.log",
-  "version": "0.1.0",
+  "name": "@briskhome/core.bus",
+  "version": "0.1.2",
   "main": "index.js",
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": [],
-    "provides": ["log"]
+    "consumes": ["log", "config"],
+    "provides": ["bus"]
   }
 }
