--- a/lib/core.db/package.json
+++ b/lib/core.db/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@briskhome/db.log",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "main": "index.js",
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": ["log"],
+    "consumes": ["log", "config"],
     "provides": ["db"]
   }
 }
