--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@briskhome/core",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
   "main": "briskhome.js",
   "scripts": {
@@ -13,18 +13,20 @@
   },
   "private": true,
   "devDependencies": {
-    "chai": "^3.4.1"
+    "chai": "^3.4.1",
+    "mongo-mock": "^2.0.1"
   },
   "dependencies": {
+    "arc4": "^3.3.1",
     "architect": "^0.1.11",
     "bristol": "^0.3.3",
-    "config-node": "^1.2.2",
     "forge": "^2.3.0",
     "ini": "^1.3.4",
     "mongoose": "^4.2.8",
     "node-forge": "^0.6.38",
     "node-nut": "^0.1.0",
     "optimist": "^0.6.1",
-    "properties": "^1.2.1"
+    "properties": "^1.2.1",
+    "restify": "^4.0.4"
   }
 }
