--- a/etc/development.conf
+++ b/etc/development.conf
@@ -1,5 +1,5 @@
 #
-# @briskhome/core.config <briskhome.conf>
+# @briskhome/core.config <development.conf>
 #
 # Configuration file.
 #
@@ -27,7 +27,7 @@ level = 4
 # Path to main log directory, either absolute or relative
 # to Briskhome installation directory.
 # Default: ./log
-path = ./
+path = log/
 
 # Name of the main Briskhome log file.
 # Default: briskhome.log
@@ -35,13 +35,14 @@ file = briskhome.log
 
 
 [api]
-
+#
 certificate
+
+#
 key
 
 
 [irrigation]
-
 # A maximum amount of water in litres that may be held in a water container.
 reservoir = 15
 # 1000
@@ -52,11 +53,11 @@ interval = 60
 
 
 [irrigation.controller]
-# The preferred means of communication with an irrigation controller. Can be either 'udp', 'radio' or 'relay'. If 'radio' is used, make sure the irrigation plugin is being launched as a child process with sudo, otherwise it will not work.
-mode = udp
+# The preferred means of communication with an irrigation controller. Can be either 'tcp', 'udp', 'radio' or 'relay'. If 'radio' is used, make sure the irrigation plugin is being launched as a child process with sudo, otherwise it will not work.
+mode = tcp
 
 # Hostname or IP address of a controller.
-address = 127.0.0.1
+address = 127.0.0.1:8888
 
 # Port number of a master controller that will process irrigation requests from this Briskhome instance.
 port = 8080
@@ -76,3 +77,38 @@ path = ./
 # Name of the irrigation log.
 # Default: irrigation.log
 file = irrigation.log
+
+
+[sms]
+#
+user = heuels@gmail.com
+
+#
+password = f845d995d4b770843ef2acbbeb0ce1a6
+
+
+[onewire]
+#
+address
+
+#
+port
+
+
+[nut]
+#
+address = localhost
+
+#
+port = 3493
+
+
+[hap]
+#
+username = CC:22:3D:E3:CE:F6
+
+#
+port = 51825
+
+#
+pincode = 031-45-154
