--- a/lib/core.api/package.json
+++ b/lib/core.api/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@briskhome/core.api",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "main": "index.js",
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": ["log", "config", "db"],
+    "consumes": ["log", "config", "db", "irrigation"],
     "provides": ["api"]
   }
 }
