--- a/lib/core.db/package.json
+++ b/lib/core.db/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@briskhome/db.log",
-  "version": "0.1.2",
+  "name": "@briskhome/core.db",
+  "version": "0.1.3",
   "main": "index.js",
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
