--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@briskhome/core",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "",
   "main": "briskhome.js",
   "scripts": {
-    "test": "mocha briskhome.spec.js"
+    "test": "mocha briskhome.spec.js",
+    "postinstall": "npm config set briskhome_dir /opt/briskhome"
   },
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "license": "MIT",
@@ -13,20 +14,28 @@
   },
   "private": true,
   "devDependencies": {
-    "chai": "^3.4.1",
-    "mongo-mock": "^2.0.1"
+    "chai": "3.4.1",
+    "mongo-mock": "2.0.1",
+    "mock-dgram": "0.1.2"
   },
   "dependencies": {
-    "arc4": "^3.3.1",
-    "architect": "^0.1.11",
-    "bristol": "^0.3.3",
-    "forge": "^2.3.0",
-    "ini": "^1.3.4",
-    "mongoose": "^4.2.8",
-    "node-forge": "^0.6.38",
-    "node-nut": "^0.1.0",
-    "optimist": "^0.6.1",
-    "properties": "^1.2.1",
-    "restify": "^4.0.4"
+    "arc4": "3.3.1",
+    "architect": "0.1.11",
+    "bristol": "0.3.3",
+    "forge": "2.3.0",
+    "mjpeg-proxy": "^0.2.0",
+    "mongoose": "4.2.8",
+    "node-forge": "0.6.38",
+    "node-nut": "0.1.0",
+    "node-persist": "0.0.11",
+    "owfs": "0.2.3",
+    "passport-localapikey-update": "github:heuels/passport-localapikey-restify",
+    "passport-restify": "1.0.1",
+    "properties": "1.2.1",
+    "restify": "4.0.4",
+    "semver": "^5.1.0"
+  },
+  "peerDependencies": {
+    "kerberos": "0.0.19"
   }
 }
