Завершено обновление модуля полива
* Добавлены протоколы HTTP и MQTT для обмена данных с контроллером;
* Добавлен модуль `@briskhome/core.mqtt`;
* Добавлен функционал автозагрузки маршрутов в модуль
`@briskhome/core.api`.

Детальная информация о новой функциональности доступна в сообщениях
коммитов ветки `feature-mqtt`.

--- a/etc/development.conf
+++ b/etc/development.conf
@@ -43,24 +43,26 @@ key
 
 
 [irrigation]
-# A maximum amount of water in litres that may be held in a water container.
-reservoir = 15
-# 1000
+# Maximum distance between the sensor and water level.
+max = 600
+
+# Minimum distance between the sensor and water level.
+min = 100
 
 # An interval in seconds for fetching status information from irrigation controller. Smaller values will decrease battery life.
 interval = 60
-# More parameters to be added.
 
 
 [irrigation.controller]
 # The preferred means of communication with an irrigation controller. Can be either 'tcp', 'udp', 'radio' or 'relay'. If 'radio' is used, make sure the irrigation plugin is being launched as a child process with sudo, otherwise it will not work.
-mode = tcp
+mode = http
 
 # Hostname or IP address of a controller.
-address = 127.0.0.1:8888
+; address = 127.0.0.1:8888
+address = 10.29.0.12
 
 # Port number of a master controller that will process irrigation requests from this Briskhome instance.
-port = 8080
+port = 8888
 
 # A passphrase that will be used to cryptographicaly sign messages to the controller. Controller must have this string in its firmware.
 secret = aLongAlphanumericStringThatIsHardToCrack
@@ -112,3 +114,9 @@ port = 51825
 
 #
 pincode = 031-45-154
+
+
+[mqtt]
+# TCP/IP port 1883 is reserved with IANA for use with MQTT. TCP/IP port 8883 is registered for using MQTT over SSL.
+# If you change this port here be sure to change it in device firmwares also.
+port = 1883
