--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "forge": "2.3.0",
     "mjpeg-proxy": "^0.2.0",
     "mongoose": "4.2.8",
+    "mosca": "^1.1.3",
     "node-forge": "0.6.38",
     "node-nut": "0.1.0",
     "node-persist": "0.0.11",
