Изменен основной системный модуль конфигурации. * Теперь конфигурация системных и внешних модулей осуществляется с помощью модуля `nconf`; * Изменено API конфигурации; * Обновлены все системные модули для использования нового API; * Добавлен модуль универсального загрузчика.

--- a/etc/development.conf
+++ b/etc/development.conf
@@ -117,6 +117,8 @@ pincode = 031-45-154
 
 
 [mqtt]
+
+host = ${db.host}
 # TCP/IP port 1883 is reserved with IANA for use with MQTT. TCP/IP port 8883 is registered for using MQTT over SSL.
 # If you change this port here be sure to change it in device firmwares also.
 port = 1883
