Версия ветки обновлена до 0.3.0: * Для загрузки компонентов теперь используется модуль **core.loader**, * Функции рекурсивной загрузки компонентов исключены из состава модулей **core.db**, **core.api**.

--- a/lib/core.api/package.json
+++ b/lib/core.api/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@briskhome/core.api",
-  "version": "0.1.3",
+  "version": "0.3.0",
   "main": "index.js",
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": ["log", "config", "db", "bus"],
+    "consumes": ["log", "config", "db", "bus", "loader"],
     "provides": ["api"]
   }
 }
