--- a/lib/core.db/package.json
+++ b/lib/core.db/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@briskhome/core.db",
-  "version": "0.1.3",
+  "version": "0.3.0",
   "main": "index.js",
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": ["log", "config"],
+    "consumes": ["log", "config", "loader"],
     "provides": ["db"]
   }
 }
