Критические изменения в модулях core.log и core.config.
**core.log**
- Основной модуль журналирования заменен с **bristol** на связку **bunyan** и **bunyan-mongodb-stream**;
- Записи журнала хранятся в базе данных **MongoDB**;
- Для создания экземпляра модуля журналирования необходимо передать название модуля в качестве первого аргумента;
- Добавлена модель данных записи журнала;
- Модули могут расширять схему, передавая перечень необходимых полей в формате схемы **mongoose** в качестве второго аргумента.

**core.config**
- Основной модуль конфигурации заменен с **config-node** на **nconf**;
- Для получения конфигурации необходимо передать название модуля в качестве первого аргумента;

**core.db**
- Обновлены модели данных;
- Изменена схема наименования моделей данных с *Name.js* на *name.model.js*;
- Добавлена поддержка авторизации в **MongoDB**;

**Прочие изменения**
- Системные файлы обновлены для поддержки новых API;
- Добавлены файлы `.jshintrc` и `.jscsrc`;
- Добавлен функционал журналирования критических ошибок в базу данных.

--- a/lib/core.db/package.json
+++ b/lib/core.db/package.json
@@ -5,7 +5,7 @@
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": ["log", "config", "loader"],
+    "consumes": ["config", "loader"],
     "provides": ["db"]
   }
 }
