--- a/lib/core.log/package.json
+++ b/lib/core.log/package.json
@@ -5,7 +5,7 @@
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": ["config"],
+    "consumes": ["config", "db"],
     "provides": ["log"]
   }
 }
