--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "arc4": "3.3.1",
     "architect": "0.1.11",
     "bristol": "0.3.3",
+    "bunyan": "^1.8.1",
+    "bunyan-mongodb-stream": "0.0.3",
     "forge": "2.3.0",
     "mjpeg-proxy": "^0.2.0",
     "mongoose": "4.2.8",
