Добавлен компонент @briskhome/core.ldap. * Добавлена поддержка LDAP (предварительный релиз); * Исправлен баг в компоненте core.api; * Добавлена поддержка журналирования событий в компоненте core.bus.

--- a/etc/development.conf
+++ b/etc/development.conf
@@ -1,7 +1,10 @@
 #
 # @briskhome/core.config <development.conf>
 #
-# Configuration file.
+# Основной конфигурационный файл системы.
+#
+# ВНИМАНИЕ!
+# Данный файл должен быть доступен только для чтения всем, кроме root!
 #
 # @author Egor Zaitsev <ezaitsev@briskhome.com>
 # @version 0.1.2
@@ -15,6 +18,12 @@ user = briskhome
 pass = development
 
 
+[core.ldap]
+host = 10.29.0.10
+user = cn=manager,dc=briskhome,dc=com
+pass = password
+
+
 [core.log]
 # Minimum level of messages that will appear in main logfile.
 # 0 - Error - critical errors that mostly require intervention
@@ -22,7 +31,7 @@ pass = development
 # 2 - Info  - informational messages about system processes
 # 3 - Debug - detailed information about important processes
 # 4 - Trace - detailed information about everything
-level = 4
+level = trace
 
 # Path to main log directory, either absolute or relative
 # to Briskhome installation directory.
