**core.api** * Исправлена ошибка при загрузке маршрутов.
**core.db**
* Добавлены модели данных: core:device, core:location, core:reading;
* Обновлены модели данных: core:sensor;
* Удалены модели данных: core:measure.

**core.ldap**
* Добавлены методы Ldap.find(), Ldap.findOne(), Ldap.insert().

**core.mqtt**
* Удалена модель core:device.

**core.telegram**
* Добавлен модуль с базовым функционалом бота.

**core.onewire**
* Добавлена функциональность автоматического поиска и добавления сенсоров;
* Произведен рефакторинг модуля.

--- a/lib/core.telegram/package.json
+++ b/lib/core.telegram/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@briskhome/core.playground",
+  "name": "@briskhome/core.telegram",
   "version": "0.3.0",
   "main": "index.js",
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": ["log", "bus", "config", "db"],
-    "provides": []
+    "consumes": ["log", "config", "ldap"],
+    "provides": ["telegram"]
   }
 }
