--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-forge": "0.6.38",
     "node-nut": "0.1.0",
     "node-persist": "0.0.11",
+    "node-telegram-bot-api": "^0.21.1",
     "owfs": "0.2.3",
     "passport-localapikey-update": "github:heuels/passport-localapikey-restify",
     "passport-restify": "1.0.1",
