:wrench: [WIP] Various changes. - Changed database models for Device, Reading, Sensor. - Added database model for Event. - Minor additions to core.ldap component. - Added core.notifications component. - Added specs for core.nut component. - [WIP] Added core.pki and core.pki.forge components. - Added core.planner component. - Added core.sensors component. - Added core.users component. - Minimum Node.js version bumped to 5.0.0

--- a/lib/core.notifications/package.json
+++ b/lib/core.notifications/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@briskhome/core.api",
+  "name": "@briskhome/core.notifications",
   "version": "0.3.0",
   "main": "index.js",
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": ["log", "config", "db", "bus", "loader", "planner"],
-    "provides": ["api"]
+    "consumes": ["config", "db"],
+    "provides": ["log"]
   }
 }
