--- a/lib/core.users/package.json
+++ b/lib/core.users/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@briskhome/core.api",
+  "name": "@briskhome/core.users",
   "version": "0.3.0",
   "main": "index.js",
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": ["log", "config", "db", "bus", "loader", "planner"],
-    "provides": ["api"]
+    "consumes": ["db", "ldap", "log"],
+    "provides": ["users"]
   }
 }
