--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "license": "MIT",
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=5.0.0"
   },
   "private": true,
   "devDependencies": {
     "chai": "3.4.1",
-    "mongo-mock": "2.0.1",
-    "mock-dgram": "0.1.2"
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-config-airbnb-base": "^5.0.1",
+    "eslint-plugin-import": "^1.12.0",
+    "mock-dgram": "0.1.2",
+    "mongo-mock": "2.0.1"
   },
   "dependencies": {
-    "arc4": "3.3.1",
+    "agenda": "^0.8.1",
     "architect": "0.1.11",
-    "bristol": "0.3.3",
     "bunyan": "^1.8.1",
     "bunyan-mongodb-stream": "0.0.3",
     "forge": "2.3.0",
@@ -30,10 +33,8 @@
     "mosca": "^1.1.3",
     "nconf": "^0.8.4",
     "node-forge": "0.6.38",
-    "node-nut": "0.1.0",
     "node-persist": "0.0.11",
     "node-telegram-bot-api": "^0.21.1",
-    "owfs": "0.2.3",
     "passport-localapikey-update": "github:heuels/passport-localapikey-restify",
     "passport-restify": "1.0.1",
     "properties": "1.2.1",
