:wrench: Updated dependencies and .travis.yml

--- a/etc/development.conf
+++ b/etc/development.conf
@@ -133,3 +133,9 @@ pass = ${core.db|pass}
 # TCP/IP port 1883 is reserved with IANA for use with MQTT. TCP/IP port 8883 is registered for using MQTT over SSL.
 # If you change this port here be sure to change it in device firmwares also.
 port = 1883
+
+[core.planner]
+name = ${core.db|name}
+host = ${core.db|host}
+user = ${core.db|user}
+pass = ${core.db|pass}
