--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "briskhome.js",
   "scripts": {
-    "test": "mocha briskhome.spec.js",
+    "test": "istanbul cover --report lcov --dir ./specs/coverage _mocha -- -R spec specs/index.spec.js",
     "postinstall": "npm config set briskhome_dir /opt/briskhome"
   },
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
@@ -20,11 +20,14 @@
     "eslint-config-airbnb-base": "^5.0.1",
     "eslint-plugin-import": "^1.12.0",
     "mock-dgram": "0.1.2",
-    "mongo-mock": "2.0.1"
+    "mockgoose": "^6.0.8",
+    "mongo-mock": "2.0.1",
+    "sinon": "^1.17.7"
   },
   "dependencies": {
     "agenda": "^0.8.1",
     "architect": "0.1.11",
+    "async": "^2.1.4",
     "bunyan": "^1.8.1",
     "bunyan-mongodb-stream": "0.0.3",
     "forge": "2.3.0",
@@ -33,13 +36,15 @@
     "mosca": "^1.1.3",
     "nconf": "^0.8.4",
     "node-forge": "0.6.38",
+    "node-nut": "^0.1.0",
     "node-persist": "0.0.11",
     "node-telegram-bot-api": "^0.21.1",
     "passport-localapikey-update": "github:heuels/passport-localapikey-restify",
     "passport-restify": "1.0.1",
     "properties": "1.2.1",
     "restify": "4.0.4",
-    "semver": "^5.1.0"
+    "semver": "^5.1.0",
+    "uuid-1345": "^0.99.6"
   },
   "peerDependencies": {
     "kerberos": "0.0.19"
