--- a/lib/core.planner/package.json
+++ b/lib/core.planner/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@briskhome/core.planner",
-  "version": "0.3.0",
+  "version": "0.3.0-alpha.1",
   "main": "index.js",
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
