--- a/lib/core.sensors/package.json
+++ b/lib/core.sensors/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@briskhome/core.notifications",
+  "name": "@briskhome/core.sensors",
   "version": "0.3.0-alpha.1",
   "main": "index.js",
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": ["config", "db"],
-    "provides": ["log"]
+    "consumes": ["db", "log", "config"],
+    "provides": ["sensors"]
   }
 }
