--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@briskhome/core",
-  "version": "0.3.0",
+  "version": "0.3.0-alpha.1",
   "description": "",
   "main": "briskhome.js",
   "scripts": {
-    "test": "istanbul cover --report lcov --dir ./specs/coverage _mocha -- -R spec specs/index.spec.js",
+    "test": "node_modules/istanbul/lib/cli.js cover --report lcov --dir specs/coverage node_modules/mocha/bin/_mocha -- -R spec specs/index.spec.js",
     "postinstall": "npm config set briskhome_dir /opt/briskhome"
   },
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
@@ -15,10 +15,13 @@
   "private": true,
   "devDependencies": {
     "chai": "3.4.1",
-    "eslint": "^3.2.2",
-    "eslint-config-airbnb": "^10.0.0",
-    "eslint-config-airbnb-base": "^5.0.1",
-    "eslint-plugin-import": "^1.12.0",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.9.0",
+    "istanbul": "^0.4.4",
+    "mocha": "^3.0.2",
     "mock-dgram": "0.1.2",
     "mockgoose": "^6.0.8",
     "mongo-mock": "2.0.1",
@@ -31,9 +34,10 @@
     "bunyan": "^1.8.1",
     "bunyan-mongodb-stream": "0.0.3",
     "forge": "2.3.0",
+    "ldapjs": "^1.0.0",
     "mjpeg-proxy": "^0.2.0",
     "mongoose": "4.2.8",
-    "mosca": "^1.1.3",
+    "mosca": "2.2.0",
     "nconf": "^0.8.4",
     "node-forge": "0.6.38",
     "node-nut": "^0.1.0",
