--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
+*.log
 _*
 .DS_Store
-dev
-etc/certs
-etc/test*
+lib/**/node_modules
+lib/**/specs/.eslintrc.json
+lib/**/specs/coverage
 node_modules
-log
-coverage
+specs/coverage
