--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "mongoose": "4.2.8",
     "mosca": "2.2.0",
     "nconf": "^0.8.4",
-    "node-forge": "0.6.38",
+    "node-forge": "^0.6.48",
     "node-nut": "^0.1.0",
     "node-persist": "0.0.11",
     "node-telegram-bot-api": "^0.21.1",
