:wrench: [skip ci] A collection of work-in-progress edits

--- a/lib/core.ldap/package.json
+++ b/lib/core.ldap/package.json
@@ -5,7 +5,7 @@
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": ["config", "log", "hub"],
+    "consumes": ["config", "log"],
     "provides": ["ldap"]
   }
 }
