--- a/lib/core.notifications/package.json
+++ b/lib/core.notifications/package.json
@@ -5,7 +5,7 @@
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": ["config", "db"],
-    "provides": ["log"]
+    "consumes": ["config", "db", "log"],
+    "provides": ["notifications"]
   }
 }
