Resolve #32. Merge core.bus and core.mqtt components.

--- a/etc/briskhome.conf
+++ b/etc/briskhome.conf
@@ -74,7 +74,7 @@ mqtt.port = 1883
 #           file    Store logs in 'file.name' located at 'file.path'.
 #           syslog  Direct formatted log output to syslog.
 
-level = info
+level = trace
 target = db
 ; file.path = log
 ; file.name = briskhome.log
