--- a/lib/core.bus/package.json
+++ b/lib/core.bus/package.json
@@ -5,7 +5,7 @@
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": ["log", "config"],
+    "consumes": ["db", "log", "config"],
     "provides": ["bus"]
   }
 }
