Basic Telegram provider for core.notifications component

--- a/lib/core.notifications/package.json
+++ b/lib/core.notifications/package.json
@@ -5,7 +5,17 @@
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": ["db", "log", "bus"],
-    "provides": ["notifications"]
+    "consumes": [
+      "db",
+      "log",
+      "bus"
+    ],
+    "provides": [
+      "notifications"
+    ]
+  },
+  "dependencies": {
+    "node-telegram-bot-api": "^0.27.0",
+    "uuid-1345": "^0.99.6"
   }
 }
