--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "briskhome.js",
   "scripts": {
-    "lint": "eslint lib --ext .js",
+    "build": "babel src -d lib --copy-files --ignore node_modules",
+    "lint": "eslint src --ext .js",
     "start": "node lib/core.js | bunyan -o short",
-    "test": "node_modules/istanbul/lib/cli.js cover -x \"lib/**/models/*\" -x \"lib/**/specs/*\" -x \"specs/*\" --report lcov --dir specs/coverage node_modules/mocha/bin/_mocha -- -R spec specs/index.spec.js",
+    "test": "node_modules/istanbul/lib/cli.js cover -x \"src/**/models/*\" -x \"src/**/specs/*\" -x \"specs/*\" --report lcov --dir specs/coverage node_modules/mocha/bin/_mocha -- -R spec specs/index.spec.js",
     "postinstall": "npm config set briskhome_dir /opt/briskhome"
   },
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
@@ -16,6 +17,10 @@
   },
   "private": true,
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
     "chai": "3.4.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
