Refactor 'core' and 'components' files to use Flow and ES6

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "briskhome.js",
   "scripts": {
-    "build": "babel src -d lib --copy-files --ignore node_modules",
+    "babel": "babel src -d lib --copy-files --ignore node_modules",
+    "babel-watch": "babel src --watch --out-dir lib",
+    "build-cleanup": "rm -rf build/*",
+    "build-watch": "yarn build-cleanup && yarn babel-watch",
+    "flow": "flow",
     "lint": "eslint src --ext .js",
     "start": "node lib/core.js | bunyan -o short",
     "test": "node_modules/istanbul/lib/cli.js cover -x \"src/**/models/*\" -x \"src/**/specs/*\" -x \"specs/*\" --report lcov --dir specs/coverage node_modules/mocha/bin/_mocha -- -R spec specs/index.spec.js",
@@ -27,6 +31,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "flow-bin": "^0.45.0",
     "istanbul": "^0.4.4",
     "mocha": "^3.0.2",
     "mock-dgram": "0.1.2",
@@ -35,14 +40,14 @@
     "sinon": "^1.17.7"
   },
   "dependencies": {
+    "@briskhome/core.bus": "file:src/core.bus",
+    "@briskhome/core.config": "file:src/core.config",
+    "@briskhome/core.db": "file:src/core.db",
+    "@briskhome/core.log": "file:src/core.log",
+    "@briskhome/core.notifications": "file:src/core.notifications",
+    "@briskhome/core.pki": "file:src/core.pki",
+    "@briskhome/core.planner": "file:src/core.planner",
     "agenda": "^0.8.1",
-    "@briskhome/core.bus": "file:lib/core.bus",
-    "@briskhome/core.config": "file:lib/core.config",
-    "@briskhome/core.db": "file:lib/core.db",
-    "@briskhome/core.log": "file:lib/core.log",
-    "@briskhome/core.notifications": "file:lib/core.notifications",
-    "@briskhome/core.pki": "file:lib/core.pki",
-    "@briskhome/core.planner": "file:lib/core.planner",
     "architect": "0.1.11",
     "async": "^2.1.4",
     "bunyan": "^1.8.1",
