Disable core.sms component

--- a/src/core.sms/package.json
+++ b/src/core.sms/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "plugin": {
     "consumes": ["config", "log"],
-    "provides": ["sms"]
+    "provides": ["sms"],
+    "disabled": true
   }
 }
