Update ESLint to use Babel parser

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "briskhome.js",
   "scripts": {
     "babel": "babel src -d lib --copy-files --ignore node_modules",
-    "babel-watch": "babel src --watch --out-dir lib",
-    "build-cleanup": "rm -rf build/*",
+    "babel-watch": "babel src --watch --out-dir lib --copy-files --ignore node_modules",
+    "build-cleanup": "rm -rf lib/*",
     "build-watch": "yarn build-cleanup && yarn babel-watch",
     "flow": "flow",
     "lint": "eslint src --ext .js",
@@ -22,12 +22,14 @@
   "private": true,
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "chai": "3.4.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-flowtype": "^2.32.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
