--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "agenda": "^0.8.1",
     "architect": "0.1.11",
     "async": "^2.1.4",
+    "babel-plugin-module-resolver": "^2.7.0",
     "bunyan": "^1.8.1",
     "bunyan-mongodb-stream": "0.0.3",
     "forge": "2.3.0",
