--- a/.flowconfig
+++ b/.flowconfig
@@ -1,5 +1,6 @@
 [ignore]
 .*/lib/.*
+.*/node_modules/@briskhome/.*
 .*/node_modules/fbjs/lib/.*flow
 .*/node_modules/@briskhome/.*
 
@@ -10,6 +11,8 @@
 .*/flow-typed/.*
 
 [options]
+esproposal.class_static_fields=enable
+esproposal.class_instance_fields=enable
 module.ignore_non_literal_requires=true
 module.system.node.resolve_dirname=node_modules
 module.system.node.resolve_dirname=src
