Unit tests and final changes to utilities/architect

--- a/src/core.log/package.json
+++ b/src/core.log/package.json
@@ -5,9 +5,7 @@
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": [
-      "config"
-    ],
+    "consumes": [],
     "provides": [
       "log"
     ]
