--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "chai": "3.4.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -66,6 +67,7 @@
     "node-nut": "^0.1.0",
     "node-persist": "0.0.11",
     "node-telegram-bot-api": "^0.21.1",
+    "nodemon": "^1.11.0",
     "passport-localapikey-update": "github:heuels/passport-localapikey-restify",
     "passport-restify": "1.0.1",
     "properties": "1.2.1",
