--- a/src/core.planner/package.json
+++ b/src/core.planner/package.json
@@ -7,8 +7,7 @@
   "plugin": {
     "consumes": [
       "db",
-      "log",
-      "config"
+      "log"
     ],
     "provides": [
       "planner"
