--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "briskhome.js",
   "scripts": {
-    "babel": "babel src -d lib --copy-files --ignore node_modules",
-    "babel-watch": "babel src --watch --out-dir lib --copy-files --ignore node_modules",
+    "babel-watch": "node_modules/.bin/babel src --watch --out-dir lib --copy-files --ignore node_modules",
+    "build": "node_modules/.bin/babel src -d lib --copy-files --ignore node_modules",
     "build-cleanup": "rm -rf lib/*",
     "build-watch": "yarn build-cleanup && yarn babel-watch",
     "flow": "flow",
     "lint": "eslint src --ext .js",
     "start": "node lib/core.js | bunyan -o short",
-    "test": "node_modules/istanbul/lib/cli.js cover -x \"src/**/models/*\" -x \"src/**/specs/*\" -x \"specs/*\" --report lcov --dir specs/coverage node_modules/mocha/bin/_mocha -- -R spec specs/index.spec.js",
+    "test": "node_modules/.bin/jest src --coverage",
     "postinstall": "npm config set briskhome_dir /opt/briskhome"
   },
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^6.10.3",
     "flow-bin": "^0.45.0",
     "istanbul": "^0.4.4",
+    "jest": "^20.0.4",
     "mocha": "^3.0.2",
     "mock-dgram": "0.1.2",
     "mockgoose": "^6.0.8",
