--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "node_modules/.bin/babel src -d lib --copy-files --ignore node_modules",
     "build-cleanup": "rm -rf lib/*",
     "build-watch": "yarn build-cleanup && yarn babel-watch",
-    "flow": "flow",
+    "flow": "node_modules/.bin/flow",
     "lint": "eslint src --ext .js",
     "start": "node lib/core.js | bunyan -o short",
     "test": "node_modules/.bin/jest src --coverage",
