Remove core.loader plugin

--- a/src/core.config/package.json
+++ b/src/core.config/package.json
@@ -5,9 +5,7 @@
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": [
-      "loader"
-    ],
+    "consumes": [],
     "provides": [
       "config"
     ]
