First implementation of a GraphQL API

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "briskhome.js",
   "scripts": {
-    "babel-watch": "node_modules/.bin/babel src --watch --out-dir lib --copy-files --ignore node_modules",
+    "babel-watch": "vagrant up && node_modules/.bin/babel src --watch --out-dir lib --copy-files --ignore node_modules",
     "build": "yarn build-cleanup && node_modules/.bin/babel src -d lib --copy-files --ignore node_modules",
     "build-cleanup": "rm -rf lib/*",
     "build-watch": "yarn build-cleanup && yarn babel-watch",
     "flow": "node_modules/.bin/flow",
     "lint": "eslint src --ext .js",
     "start": "node lib/core.js | bunyan -o short",
+    "start-watch": "node_modules/.bin/nodemon lib/core.js | node_modules/.bin/bunyan -o short",
     "start-ugly": "node lib/core.js --ugly | bunyan -o short",
     "test": "node_modules/.bin/jest src --coverage",
     "postinstall": "npm config set briskhome_dir /opt/briskhome"
@@ -51,8 +52,15 @@
     "async": "^2.1.4",
     "bunyan": "^1.8.1",
     "bunyan-mongodb-stream": "0.0.3",
+    "dataloader": "^1.3.0",
+    "express": "^4.15.3",
+    "express-graphql": "^0.6.6",
     "eventemitter2": "^4.1.0",
     "forge": "2.3.0",
+    "graphql": "^0.10.5",
+    "graphql-modules": "^0.2.1",
+    "graphql-server-express": "^0.8.0",
+    "graphql-tools": "^1.0.0",
     "ldapjs": "^1.0.0",
     "mjpeg-proxy": "^0.2.0",
     "mongoose": "4.2.8",
