--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build-cleanup": "rm -rf lib/*",
     "build-watch": "yarn build-cleanup && yarn babel-watch",
     "flow": "node_modules/.bin/flow",
-    "lint": "eslint src --ext .js",
+    "lint": "eslint src --ext .js,.jsx --ignore-pattern **/*.spec.js",
     "start": "node lib/core.js | bunyan -o short",
     "start-watch": "node_modules/.bin/nodemon lib/core.js | node_modules/.bin/bunyan -o short",
     "start-ugly": "node lib/core.js --ugly | bunyan -o short",
