--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
  "presets": ["flow", "react"],
  "plugins": [
+   "transform-class-properties",
    "transform-inline-imports-commonjs",
    "transform-object-rest-spread",
    ["module-resolver", { "root": ["./src"] }]
