--- a/.eslintrc
+++ b/.eslintrc
@@ -2,14 +2,16 @@
   "extends": "airbnb",
   "parser": "babel-eslint",
   "plugins": [
-    "flowtype"
+    "flowtype",
+    "react"
   ],
   "rules": {
     "global-require": ["off"],
     "import/no-dynamic-require": ["off"],
     "import/no-extraneous-dependencies": ["off"],
+    "jsx-quotes": ["error", "prefer-single"],
     "no-console": ["error", { "allow": ["warn", "error"] }],
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "max-len": ["error", 120]
+    "max-len": ["error", 120],
   }
 }
