--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "briskhome.js",
   "scripts": {
-    "babel-watch": "vagrant up && node_modules/.bin/babel src --watch --out-dir lib --copy-files --ignore node_modules",
-    "build": "yarn build-cleanup && node_modules/.bin/babel src -d lib --copy-files --ignore node_modules",
+    "babel-watch": "vagrant up && node_modules/.bin/babel src --watch --out-dir lib --copy-files --ignore node_modules & yarn webpack-watch",
+    "build": "yarn build-cleanup && node_modules/.bin/babel src -d lib --copy-files --ignore node_modules & yarn webpack",
     "build-cleanup": "rm -rf lib/*",
     "build-watch": "yarn build-cleanup && yarn babel-watch",
     "flow": "node_modules/.bin/flow",
@@ -14,7 +14,9 @@
     "start-watch": "node_modules/.bin/nodemon lib/core.js | node_modules/.bin/bunyan -o short",
     "start-ugly": "node lib/core.js --ugly | bunyan -o short",
     "test": "node_modules/.bin/jest src --coverage",
-    "postinstall": "npm config set briskhome_dir /opt/briskhome"
+    "postinstall": "npm config set briskhome_dir /opt/briskhome",
+    "webpack": "node_modules/.bin/webpack --config ./lib/core.webapp/webpack.config.js --context ./lib/core.webapp",
+    "webpack-watch": "node_modules/.bin/webpack --config ./src/core.webapp/webpack.config.js --context ./src/core.webapp --watch"
   },
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "license": "MIT",
@@ -25,11 +27,14 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.1",
     "babel-plugin-module-resolver": "^2.7.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-inline-imports-commonjs": "^1.2.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-flowtype": "^2.32.1",
@@ -37,7 +42,15 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
     "flow-bin": "^0.45.0",
-    "jest": "^20.0.4"
+    "jest": "^20.0.4",
+    "react-router-dom": "^4.1.2",
+    "redux-devtools": "^3.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
+    "style-loader": "^0.18.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "webpack": "^3.3.0"
   },
   "dependencies": {
     "agenda": "1.0.0",
@@ -57,6 +70,16 @@
     "node-telegram-bot-api": "^0.21.1",
     "nodemon": "^1.11.0",
     "properties": "1.2.1",
+    "react": "^15.6.1",
+    "react-apollo": "^1.4.8",
+    "react-dom": "^15.6.1",
+    "react-flexbox-grid": "^1.1.3",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.2",
+    "react-router-redux": "^4.0.8",
+    "react-simple-dropdown": "^3.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "uuid-1345": "^0.99.6"
   },
   "jest": {
