--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,14 @@
 {
   "extends": "airbnb",
   "parser": "babel-eslint",
-  "plugins": [
-    "flowtype",
-    "react"
-  ],
+  "plugins": ["flowtype", "react"],
   "rules": {
     "global-require": ["off"],
     "import/no-dynamic-require": ["off"],
     "import/no-extraneous-dependencies": ["off"],
-    "jsx-quotes": ["error", "prefer-single"],
     "no-console": ["error", { "allow": ["warn", "error"] }],
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
     "max-len": ["error", 120],
+    "react/require-default-props": ["off"]
   }
 }
