--- a/.flowconfig
+++ b/.flowconfig
@@ -11,5 +11,6 @@
 
 [options]
 module.ignore_non_literal_requires=true
+module.name_mapper='.*\.styl$' -> '<PROJECT_ROOT>/src/__mocks__/styl.js'
 module.system.node.resolve_dirname=node_modules
 module.system.node.resolve_dirname=src
