--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test": "node_modules/.bin/jest src --coverage",
     "postinstall": "npm config set briskhome_dir /opt/briskhome",
     "webpack": "node_modules/.bin/webpack --config ./lib/core.webapp/webpack.config.js --context ./lib/core.webapp",
-    "webpack-watch": "node_modules/.bin/webpack --config ./src/core.webapp/webpack.config.js --context ./src/core.webapp --watch"
+    "webpack-watch": "node_modules/.bin/webpack --config ./src/core.webapp/webpack.config.js --context ./src/core.webapp --watch",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "license": "MIT",
@@ -25,6 +27,7 @@
   },
   "private": true,
   "devDependencies": {
+    "@storybook/react": "^3.2.5",
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
@@ -35,6 +38,8 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
+    "enzyme": "^2.9.1",
+    "enzyme-to-json": "^1.5.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-flowtype": "^2.32.1",
@@ -44,6 +49,7 @@
     "flow-bin": "^0.45.0",
     "jest": "^20.0.4",
     "react-router-dom": "^4.1.2",
+    "react-test-renderer": "^15.6.1",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
@@ -70,20 +76,30 @@
     "node-telegram-bot-api": "^0.21.1",
     "nodemon": "^1.11.0",
     "properties": "1.2.1",
+    "rc-menu": "^5.0.10",
     "react": "^15.6.1",
     "react-apollo": "^1.4.8",
+    "react-aria-menubutton": "^5.0.2",
     "react-dom": "^15.6.1",
+    "react-dropdown": "heuels/react-dropdown#disabled_classname",
     "react-flexbox-grid": "^1.1.3",
+    "react-input-mask": "^1.0.7",
+    "react-minimal-dropdown": "^1.1.1",
+    "react-modal": "^2.2.4",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
     "react-router-redux": "^4.0.8",
     "react-simple-dropdown": "^3.0.0",
+    "react-toggle": "^4.0.1",
+    "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "uuid-1345": "^0.99.6"
   },
   "jest": {
-    "automock": true,
-    "modulePathIgnorePatterns": ["<rootDir>/lib/"]
+    "modulePathIgnorePatterns": ["<rootDir>/lib/"],
+    "moduleNameMapper": {
+      "\\.(css|styl)$": "<rootDir>/src/__mocks__/styl.js"
+    }
   }
 }
