--- a/.flowconfig
+++ b/.flowconfig
@@ -1,6 +1,6 @@
 [ignore]
 .*/lib/.*
-.*/node_modules/fbjs/lib/.*flow
+.*/node_modules/.*
 .*/node_modules/@briskhome/.*
 
 [include]
@@ -12,5 +12,4 @@
 [options]
 module.ignore_non_literal_requires=true
 module.name_mapper='.*\.styl$' -> '<PROJECT_ROOT>/src/__mocks__/styl.js'
-module.system.node.resolve_dirname=node_modules
 module.system.node.resolve_dirname=src
