--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
-    "chai": "3.4.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-flowtype": "^2.32.1",
@@ -38,43 +37,26 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
     "flow-bin": "^0.45.0",
-    "istanbul": "^0.4.4",
-    "jest": "^20.0.4",
-    "mocha": "^3.0.2",
-    "mock-dgram": "0.1.2",
-    "mockgoose": "^6.0.8",
-    "mongo-mock": "2.0.1",
-    "sinon": "^1.17.7"
+    "jest": "^20.0.4"
   },
   "dependencies": {
     "agenda": "^0.8.1",
     "architect": "0.1.11",
     "async": "^2.1.4",
     "bunyan": "^1.8.1",
-    "bunyan-mongodb-stream": "0.0.3",
     "dataloader": "^1.3.0",
+    "eventemitter2": "^4.1.0",
     "express": "^4.15.3",
     "express-graphql": "^0.6.6",
-    "eventemitter2": "^4.1.0",
     "forge": "2.3.0",
     "graphql": "^0.10.5",
-    "graphql-modules": "^0.2.1",
-    "graphql-server-express": "^0.8.0",
     "graphql-tools": "^1.0.0",
-    "ldapjs": "^1.0.0",
-    "mjpeg-proxy": "^0.2.0",
     "mongoose": "4.2.8",
     "nconf": "^0.8.4",
     "node-forge": "^0.6.48",
-    "node-nut": "^0.1.0",
-    "node-persist": "0.0.11",
     "node-telegram-bot-api": "^0.21.1",
     "nodemon": "^1.11.0",
-    "passport-localapikey-update": "github:heuels/passport-localapikey-restify",
-    "passport-restify": "1.0.1",
     "properties": "1.2.1",
-    "restify": "4.0.4",
-    "semver": "^5.1.0",
     "uuid-1345": "^0.99.6"
   },
   "peerDependencies": {
